--- a/style.css
+++ b/style.css
@@ -40,6 +40,14 @@ p {
   margin: 15px 0 20px 0;
 }
 
+.section-p1{
+  padding: 40px 80px;
+}
+
+.section-m1{
+  margin: 40px 0px;
+}
+
 body {
     width: 100%;
   }
@@ -133,3 +141,60 @@ body {
 }
 
 /* Hero Section End  */
+
+/* Features Section Start  */
+#features{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+#features .fe-box{
+  width: 180px;
+  text-align: center;
+  padding: 25px 15px;
+  box-shadow: 20px 20px 34px rgba(0, 0, 0, 0.03);
+  border: 1px solid #cce7d0;
+  border-radius: 4px;
+  margin: 15px 0;
+}
+
+#features .fe-box:hover{
+  box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
+}
+
+#features .fe-box img{
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+#features .fe-box h6{
+  display: inline-block;
+  padding: 9px 8px 6px 8px;
+  line-height: 1;
+  border-radius: 4px;
+  color: #088178;
+  background-color: #fddde4;
+}
+#features .fe-box:nth-child(2) h6{
+  background-color: #cdebbc;
+}
+
+#features .fe-box:nth-child(3) h6{
+  background-color: #d1e8f2;
+}
+
+#features .fe-box:nth-child(4) h6{
+  background-color: #cdd4f8;
+}
+
+#features .fe-box:nth-child(5) h6{
+  background-color: #f6dbf6;
+}
+
+#features .fe-box:nth-child(6) h6{
+  background-color: #fff2e5;
+}
+
+/* Features Section End */
