--- a/style.css
+++ b/style.css
@@ -48,6 +48,19 @@ p {
   margin: 40px 0px;
 }
 
+button.normal{
+  font-size: 14px;
+  font-weight: 600;
+  padding: 15px 30px;
+  color: black;
+  background-color: #ffff;
+  border-radius: 4px;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  transition: 0.2s;
+}
+
 body {
     width: 100%;
   }
@@ -276,5 +289,43 @@ body {
   right: 10px;
 }
 
-/* Product section start  */
+/* Product section End  */
+
+/* Banner section start  */
+
+#banner{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-image: url("img/banner/b2.jpg");
+  width: 100%;
+  height: 40vh;
+  background-size: cover;
+  background-position: center;
+}
+
+#banner h4{
+  color: white;
+  font-size: 16px;
+}
+
+#banner h2{
+  color: white;
+  font-size: 30px;
+  padding: 10px 0;
+}
+
+#banner h2 span{
+  color: rgb(233, 10, 10);
+  
+}
+
+#banner button:hover{
+  background-color: #088178;
+  color: #fff;
+}
+/* Banner section End  */
+
+
 
