--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Spartan:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -40,15 +41,15 @@ p {
   margin: 15px 0 20px 0;
 }
 
-.section-p1{
+.section-p1 {
   padding: 40px 80px;
 }
 
-.section-m1{
+.section-m1 {
   margin: 40px 0px;
 }
 
-button.normal{
+button.normal {
   font-size: 14px;
   font-weight: 600;
   padding: 15px 30px;
@@ -61,7 +62,7 @@ button.normal{
   transition: 0.2s;
 }
 
-button.white{
+button.white {
   font-size: 13px;
   font-weight: 600;
   padding: 11px 18px;
@@ -75,65 +76,73 @@ button.white{
 }
 
 body {
-    width: 100%;
-  }
+  width: 100%;
+}
 
-  /* Header start  */
+/* Header start  */
 
-  #header{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 20px 80px;
-    background-color: #E3E6F3;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
-    z-index: 999;
-    position: sticky;
-    top: 0;
-    left: 0;
-  }
+#header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 20px 80px;
+  background-color: #E3E6F3;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.6);
+  z-index: 999;
+  position: sticky;
+  top: 0;
+  left: 0;
+}
 
-  #navbar{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-  }
+#navbar {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  #navbar li{
-    list-style: none;
-    padding: 0 20px;
-    position: relative;
-  }
-  
-  #navbar li a{
-    text-decoration: none;
-    font-size: 16px;
-    font-weight: 600;
-    color: #1a1a1a;
-    transition: 0.3s ease;
-  }
+#navbar li {
+  list-style: none;
+  padding: 0 20px;
+  position: relative;
+}
 
-  #navbar li a:hover,
-  #navbar li a.active{
-    color: #088178;
-  }
+#navbar li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 600;
+  color: #1a1a1a;
+  transition: 0.3s ease;
+}
 
-  #navbar li a.active::after,
-  #navbar li a:hover::after{
-    content: "";
-    width: 30%;
-    height: 2px;
-    background-color: #088178;
-    position: absolute;
-    bottom: -4px;
-    left: 20px;
-  }
+#navbar li a:hover,
+#navbar li a.active {
+  color: #088178;
+}
 
-  /* header End  */
+#navbar li a.active::after,
+#navbar li a:hover::after {
+  content: "";
+  width: 30%;
+  height: 2px;
+  background-color: #088178;
+  position: absolute;
+  bottom: -4px;
+  left: 20px;
+}
+
+#mobile {
+  display: none;
+}
+
+#close {
+  display: none;
+}
+
+/* header End  */
 
 /* Home Page Start */
 
-#hero{
+#hero {
   background-image: url("img/hero4.png");
   height: 90vh;
   width: 100%;
@@ -146,15 +155,15 @@ body {
   align-items: flex-start;
 }
 
-#hero h4{
+#hero h4 {
   padding-bottom: 15px;
 }
 
-#hero h1{
+#hero h1 {
   color: #088178;
 }
 
-#hero button{
+#hero button {
   background-image: url("img/button.png");
   background-color: transparent;
   color: #088178;
@@ -169,14 +178,14 @@ body {
 /* Hero Section End  */
 
 /* Features Section Start  */
-#features{
+#features {
   display: flex;
   align-items: center;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-#features .fe-box{
+#features .fe-box {
   width: 180px;
   text-align: center;
   padding: 25px 15px;
@@ -186,16 +195,16 @@ body {
   margin: 15px 0;
 }
 
-#features .fe-box:hover{
+#features .fe-box:hover {
   box-shadow: 10px 10px 54px rgba(70, 62, 221, 0.1);
 }
 
-#features .fe-box img{
+#features .fe-box img {
   width: 100%;
   margin-bottom: 10px;
 }
 
-#features .fe-box h6{
+#features .fe-box h6 {
   display: inline-block;
   padding: 9px 8px 6px 8px;
   line-height: 1;
@@ -203,45 +212,46 @@ body {
   color: #088178;
   background-color: #fddde4;
 }
-#features .fe-box:nth-child(2) h6{
+
+#features .fe-box:nth-child(2) h6 {
   background-color: #cdebbc;
 }
 
-#features .fe-box:nth-child(3) h6{
+#features .fe-box:nth-child(3) h6 {
   background-color: #d1e8f2;
 }
 
-#features .fe-box:nth-child(4) h6{
+#features .fe-box:nth-child(4) h6 {
   background-color: #cdd4f8;
 }
 
-#features .fe-box:nth-child(5) h6{
+#features .fe-box:nth-child(5) h6 {
   background-color: #f6dbf6;
 }
 
-#features .fe-box:nth-child(6) h6{
+#features .fe-box:nth-child(6) h6 {
   background-color: #fff2e5;
 }
 
 /* Features Section End */
 
 /* Product section start  */
-#product1{
+#product1 {
   text-align: center;
 }
 
-#product1 .pro-container{
+#product1 .pro-container {
   display: flex;
   justify-content: space-between;
   padding-top: 20px;
   flex-wrap: wrap;
 }
 
-#product1 .pro{
+#product1 .pro {
   width: 23%;
-  min-height: 250px;
+  min-width: 250px;
   padding: 10px 12px;
-  /* border: 0.1px solid black; */
+  border: 1px solid #cce7d0;
   border-radius: 25px;
   cursor: pointer;
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.02);
@@ -250,45 +260,45 @@ body {
   position: relative;
 }
 
-#product1 .pro:hover{
+#product1 .pro:hover {
   box-shadow: 20px 20px 30px rgba(0, 0, 0, 0.06);
 
 }
 
-#product1 .pro img{
+#product1 .pro img {
   width: 100%;
   border-radius: 20px;
 }
 
-#product1 .pro .des{
+#product1 .pro .des {
   text-align: start;
   padding: 10px 0;
 }
 
-#product1 .pro .des span{
+#product1 .pro .des span {
   color: #606063;
   font-size: 12px;
 }
 
-#product1 .pro .des h5{
+#product1 .pro .des h5 {
   padding-top: 7px;
   color: #1a1a1a;
   font-size: 14px;
 }
 
-#product1 .pro .des i{
+#product1 .pro .des i {
   font-size: 12px;
   color: rgb(243, 181, 25);
 }
 
-#product1 .pro .des h4{
+#product1 .pro .des h4 {
   padding-top: 7px;
   font-size: 15px;
   font-weight: 700;
   color: #088178;
 }
 
-#product1 .pro .cart{
+#product1 .pro .cart {
   width: 40px;
   height: 40px;
   line-height: 40px;
@@ -306,7 +316,7 @@ body {
 
 /* Banner section start  */
 
-#banner{
+#banner {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -318,35 +328,36 @@ body {
   background-position: center;
 }
 
-#banner h4{
+#banner h4 {
   color: white;
   font-size: 16px;
 }
 
-#banner h2{
+#banner h2 {
   color: white;
   font-size: 30px;
   padding: 10px 0;
 }
 
-#banner h2 span{
+#banner h2 span {
   color: rgb(233, 10, 10);
-  
+
 }
 
-#banner button:hover{
+#banner button:hover {
   background-color: #088178;
   color: #fff;
 }
+
 /* Banner section End  */
 /* SM Banner section start  */
-#sm-banner{
+#sm-banner {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-#sm-banner .banner-box{
+#sm-banner .banner-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -359,42 +370,42 @@ body {
   padding: 30px;
 }
 
-#sm-banner .banner-box2{
-  background-image: url("img/banner/b18.jpg");
+#sm-banner .banner-box2 {
+  background-image: url("img/banner/b10.jpg");
 }
 
-#sm-banner h4{
+#sm-banner h4 {
   color: #fff;
   font-size: 20px;
   font-weight: 300;
 }
 
-#sm-banner h2{
+#sm-banner h2 {
   color: #fff;
   font-size: 28px;
   font-weight: 800;
 }
 
-#sm-banner span{
+#sm-banner span {
   color: #fff;
   font-size: 14px;
   font-weight: 500;
   padding-bottom: 15px;
 }
 
-#sm-banner .banner-box:hover button{
+#sm-banner .banner-box:hover button {
   background: #088178;
   border: 1px solid #088178;
 }
 
-#banner3{
+#banner3 {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
   padding: 0 80px;
 }
 
-#banner3 .banner-box{
+#banner3 .banner-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -408,28 +419,28 @@ body {
   margin-bottom: 20px;
 }
 
-#banner3 h2{
+#banner3 h2 {
   color: #fff;
   font-weight: 900;
   font-size: 15px;
 }
 
-#banner3 h3{
+#banner3 h3 {
   color: #ec544e;
   font-weight: 900;
   font-size: 15px;
 }
 
-#banner3 .banner-box2{
+#banner3 .banner-box2 {
   background-image: url("img/banner/b4.jpg");
 }
 
-#banner3 .banner-box3{
+#banner3 .banner-box3 {
   background-image: url("img/banner/b18.jpg");
 }
 
 /* Newsleter Section Start  */
-#newsletter{
+#newsletter {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -439,29 +450,31 @@ body {
   background-position: 20% 30%;
   background-color: #041e42;
 }
-#newsletter h4{
+
+#newsletter h4 {
   font-size: 22px;
   font-weight: 700;
   color: #fff;
 }
 
-#newsletter p{
+#newsletter p {
   font-size: 14px;
   font-weight: 600;
   color: #818ea0;
 }
 
-#newsletter .form{
+#newsletter .form {
   display: flex;
   width: 40%;
   justify-content: space-between;
 
 }
-#newsletter p span{
+
+#newsletter p span {
   color: #ffbd27;
 }
 
-#newsletter input{
+#newsletter input {
   height: 3.125rem;
   padding: 0 1.25em;
   font-size: 14px;
@@ -473,7 +486,7 @@ body {
   border-bottom-right-radius: 0;
 }
 
-#newsletter button{
+#newsletter button {
   background-color: #088178;
   color: #fff;
   white-space: nowrap;
@@ -482,65 +495,65 @@ body {
 }
 
 /* Footer start  */
-footer{
+footer {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
 }
 
-footer .col{
+footer .col {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   margin-bottom: 20px;
 }
 
-footer .logo{
+footer .logo {
   margin-bottom: 30px;
 }
 
-footer h4{
+footer h4 {
   font-size: 14px;
   padding-bottom: 20px;
 }
 
-footer h2{
+footer h2 {
   font-size: 13px;
   margin: o o 8px 0;
 }
 
-footer a{
+footer a {
   font-size: 13px;
   text-decoration: none;
   color: #222;
   margin-bottom: 10px;
 }
 
-footer .follow{
+footer .follow {
   margin-top: 20px;
 }
 
-footer .follow i{
+footer .follow i {
   color: #465b52;
   padding-right: 4px;
   cursor: pointer;
 }
 
-footer .install .row img{
+footer .install .row img {
   border: 1px solid #088178;
   border-radius: 6px;
 }
 
-footer .install img{
+footer .install img {
   margin: 10px 0 15px 0;
 }
 
 footer .follow i:hover,
-footer a:hover{
+footer a:hover {
   color: #088178;
 }
 
-footer .copyright{
+footer .copyright {
   width: 100%;
   text-align: center;
 }
@@ -548,4 +561,155 @@ footer .copyright{
 
 /* Start Media Query  */
 
+@media (max-width:799px) {
+  .section-p1 {
+    padding: 40px 40px;
+  }
 
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0px 0px 10px;
+    transition: 0.3s ease-in-out;
+  }
+
+  #navbar.active {
+    right: 0px;
+  }
+
+  #navbar li {
+    margin-bottom: 25px;
+  }
+
+  #mobile {
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i {
+    color: #1a1a1a;
+    font-size: 24px;
+    padding-left: 20px;
+  }
+
+  #close {
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    font-size: 24px;
+  }
+
+  #lg-bag {
+    display: none;
+  }
+
+  #hero {
+    height: 70vh;
+    background-position: top 30% right 30%;
+    padding: 0 80px;
+  }
+
+  #features {
+    justify-content: center;
+  }
+
+  #features .fe-box {
+    margin: 15px 15px;
+  }
+
+  #product1 .pro-container {
+
+    justify-content: center;
+  }
+
+  #product1 .pro {
+    margin: 15px;
+  }
+
+  #banner {
+    height: 20vh;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 30vh;
+  }
+
+  #banner3 {
+    padding: 0 40px;
+  }
+
+  #banner3 .banner-box {
+    width: 28%;
+  }
+
+  #newsletter .form {
+    width: 70%;
+  }
+}
+
+@media (max-width:477px) {
+  .section-p1{
+    padding: 20px;
+  }
+  #header {
+    padding: 10px 30px;
+  }
+  h1{
+    font-size: 38px;
+  }
+  h2{
+    font-size: 32px;
+  }
+  #hero{
+    padding: 0 20px;
+    background-position: 55%;
+  }
+  #features {
+    justify-content: space-between;
+}
+
+  #features .fe-box {
+    width: 155px;
+    margin: 0 0 15px 0;
+}
+
+#product1 .pro {
+  width: 100;
+}
+#banner {
+  height: 40vh;
+}
+
+#sm-banner .banner-box {
+  height: 40vh;
+}
+#sm-banner .banner-box2 {
+  margin-top: 20px;
+}
+#banner3 {
+  padding: 0 20px;
+}
+#banner3 .banner-box {
+  width: 100%;
+}
+#newsletter{
+  padding: 40px 20px;
+}
+#newsletter .form { 
+  width: 100%; 
+}
+footer .copyright {
+  text-align: start;
+}
+}
